syntax = "proto3";

package proto;
option java_package = "org.example";
option java_multiple_files = true;

service DatabaseService {
  rpc Create (SensorDataRequest) returns (CreateResponse);
  rpc Read   (Key)       returns (SensorDataStored);
  rpc Update (UpdateRequest) returns (CreateResponse);
  rpc Delete (DeleteRequest) returns (CreateResponse);
  rpc ReadAll (Empty) returns (SensorDataStoredList);
}

message Key {
  string id = 1;
}

message SensorDataRequest {
  int32 sensorId = 1;
  string temperature = 2;
}

message SensorDataStored {
  string id = 1;
  int32 sensorId = 2;
  string temperature = 3;
}

message Response {
  bool   success = 1;
  string message = 2;
}

message CreateResponse {
  string id = 1;
  bool   success = 2;
  string message = 3;
}

message SensorDataStoredList {
  repeated SensorDataStored entries = 1;
}

message Empty {}

message UpdateRequest {
  string id = 1;
  SensorDataRequest updated_data = 2;
}

message DeleteRequest {
  string id = 1;
}
